backend/k8s/02-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamx-postgres
  namespace: streamx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamx-postgres
  template:
    metadata:
      labels:
        app: streamx-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: streamx-postgres
  namespace: streamx
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: streamx-postgres
