backend/k8s/03-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamx-redis
  namespace: streamx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamx-redis
  template:
    metadata:
      labels:
        app: streamx-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: streamx-redis
  namespace: streamx
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: streamx-redis
